force-app/main/default/objects/Premiums__c/Premiums__c.object-meta.xml
<CustomObject>
    <label>Premium</label>
    <nameField>
        <label>Premiums Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premiums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>