force-app/main/default/objects/Premiums__c/fields/FMV_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>FMV_Per_Unit__c</fullName>
    <label>FMV Per Unit</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>