force-app/main/default/objects/Premiums__c/fields/Provided__c.field-meta.xml
<CustomField>
    <fullName>Provided__c</fullName>
    <label>Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Join/Purch</fullName>
            </value>
            <value>
                <fullName>Join Only</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Join/Req</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>